--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -109,6 +109,15 @@ article p {
 /* If label contains inline svg or img, keep them aligned */
 .logo img { vertical-align: middle; }
 
+/* Fix SVG sizing in h1 elements */
+h1 svg {
+  width: 28px !important;
+  height: 28px !important;
+  display: inline !important;
+  vertical-align: middle !important;
+  margin-left: 4px !important;
+}
+
 .buttons .buttons-inner {
     radius: 0px !important;
 }
